# tsds

./: .gitignore  adaptive_interpolation.py  analysis.ipynb  analysis.py  auto_interpolation.py  auto_select.py  core.py  data_analyzer.py  data_utils.py  interpolation_controller.py  linear_interpolation_159782958.py  log_linear_interpolation_160077920.py  main.py  notebook_analysis.py  pyproject.toml  series_extraction.py  setup_env.py  time_series_analyzer.py  visualizer.py  выделение рядов.py  линейная интерполяция 159782958.py
data/old/: log_linear_interpolation_160077920.py
data/processed/: series_159782957_linear_filled.csv  series_159782958_linear_filled.csv  series_159782959_linear_filled.csv  series_159782960_linear_filled.csv  series_159895693_linear_filled.csv  series_160077920_linear_filled.csv  series_160077920_log_filled.csv
data/temp/: series_159895693.csv
data/top_series/: series_159782957.csv  series_159782958.csv  series_159782959.csv  series_159782960.csv  series_159921173.csv  series_160077920.csv  series_160081309.csv  series_160089766.csv  series_160089810.csv
methods/: __init__.py  linear.py  linear_interpolation.py  log.py  log_interpolation.py  polynomial.py  polynomial_interpolation.py  spline.py  spline_interpolation.py
old/: linear_interpolation_159782958.py
