[project]
name = "tsds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]
